BE stock (get,post), event + brand (CRUD)
