# backend/routes/index.route.js
@@ -10,6 +10,8 @@ const blogAuthorRoute = require("./blogAuthor.routes");
 const blogTagRoute = require("./blogTags.routes");
 const upholsteryRoute = require("./upholstery.routes");
 const blogCategoriesRoute = require("./blogCategory.routes");
+const stockItemRoute = require("./stockItem.routes");
+const stockMovementRoute = require("./stockMovement.routes");
 function route(app) {
   app.use("/api/auth", authRoute);
   app.use("/api/products", productRoute);
@@ -23,5 +25,7 @@ function route(app) {
   app.use("/api/blog-tags", blogTagRoute);
   app.use("/api/upholstery", upholsteryRoute);
   app.use("/api/blog-categories", blogCategoriesRoute);
+  app.use("/api/stock-items", stockItemRoute);
+  app.use("/api/stock-movements", stockMovementRoute);
 }
 module.exports = route;
